--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <div class="contact-item media"> <i class="fa fa-map-marker-alt media-left media-right-margin"></i>
                   <div class="media-body">
                     <p class="text-uppercase">Address</p>
-                    <p class="text-uppercase">New Delhi, India</p>
+                    <p class="text-uppercase">Maroc, Casablanca</p>
                   </div>
                 </div>
                 <div class="contact-item media"> <i class="fa fa-mobile media-left media-right-margin"></i>
